# microwiki

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  download_model.py  pyproject.toml  test.py
