[tool.poetry]
name = "microwiki"
version = "0.1.0"
description = "Summarizes Wikipedia pages."
authors = ["jaymody <jaykmody@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.21.2"
torch = "^1.12.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
pylint = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
